# curso_streamlit_dataquality

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  search.html
data/: dados_invalidos_1.csv  dados_invalidos_2.csv  dados_validos.csv
docs/: index.md  p2-backend.md  p3-frontend.md  p4-test.md
p2-backend/: index.html
p3-frontend/: index.html
p4-test/: index.html
search/: search_index.json
src/: __init__.py  database.py  schema.py
test/: test_app.py  test_schema.py
