[tool.poetry]
name = "curso-streamlit-dataquality"
version = "0.1.0"
description = ""
authors = ["LucianoBorba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
black = "^24.3.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
mkdocs = "^1.5.3"
pip-audit = "^2.7.2"
pre-commit = "^3.7.0"
taskipy = "^1.12.2"
selenium = "^4.19.0"
pytest = "^8.1.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
sqlalchemy = "^2.0.29"
mkdocs-dracula-theme = "^1.0.7"
mkdocs-material = "^9.5.17"
mkdocstrings = {extras = ["python"], version = "^0.24.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "black . && isort ."
check = "pydocstyle && pip-audit"